--- a/desc/desc.html
+++ b/desc/desc.html
@@ -13,6 +13,7 @@
 <p>&nbsp;</p>
 
 
+
 <h2>Template Features</h2>
 <ul>
     <li><strong>6 Home Versions Available</strong></li>
@@ -56,4 +57,4 @@
 
 Tags
 
-furniture, clean, modern, shop, slider, store , multi purpose, e-commerce, quick view
+fashion, cosmetic, clothing, clean, modern, page builder, shop, slider, store,
