--- a/desc/desc.html
+++ b/desc/desc.html
@@ -1,7 +1,5 @@
-<h2>Delphinus - Creative Multi-Purpose eCommerce HTML5 Responsive</h2>
+<h2>WINGMAN - Responsive WooCommerce Theme</h2>
 <p>We are happy to announce our new Delphinus - Creative Multi-Purpose eCommerce HTML5 Responsive. A great UI with a unique cool design, modern, stylish, and intuitive assistant for creating your best online store. </p>
-
-<p><img src="http://kitethemes.com/images/delphinus-desc.jpg" alt="" /></p>
 
 <p>
     <a rel="nofollow" href="https://www.facebook.com/kitethemes/"><img alt="Follow us on Facebook" src="http://kitethemes.com/images/follow-facebook.jpg"></a>
@@ -14,32 +12,57 @@
 
 
 
-<h2>Template Features</h2>
+<h2>Theme Features</h2>
+
+
 <ul>
-    <li><strong>6 Home Versions Available</strong></li>
-    <li><strong>3 Header Styles</strong></li>
-    <li><strong>3 Footer Styles</strong></li>
-    <li>Build on HTML5 Boilerplate and Twitter Bootstrap 3.x</li>
-    <li><strong>Build On SCSS</strong></li>
-    <li>Font Awesome Icon</li>
-    <li>Google Webfonts</li>
-    <li>Well Documented</li>
-    <li>Clean Code</li>
-    <li>%100 Fully Responsive</li>
-    <li>Valid HTML5 &amp; CSS3</li>
-    <li>Responsive Layout</li>
+    <li><strong>Visual Page Builder SAVE $33</strong></li>
+    <li><strong>Slider Revolution SAVE $19</strong></li>
+    <li>WordPress 4+ Ready</li>
+    <li>WPML supported</li>
+    <li>WooCommerce 2.4 Ready</li>
+    <li>Unlimited color</li>
+    <li>Color presets included</li>
+    <li>Grid view and list view for shop page</li>
+    <li>Multiple home page layouts</li>
+    <li>Wishlists, Ajax shopping cart, Product Quick View</li>
+    <li>Product Quickview Ready</li>
+    <li>Popup Newsletter & Promotion</li>
+    <li>Full responsive</li>
+    <li>Valid HTML &amp; CSS</li>
+    <li>Google Fonts</li>
+    <li>Integrate Comingsoon</li>
+    <li>Custom 404 Page</li>
+    <li><strong>Once Click Demo Install</strong></li>
+    <li>Supported Contact form 7</li>
+    <li>Compatible with WPML</li>
+    <li>Compatible with Layer slider</li>
+    <li>Sticky Header</li>
+    <li>Multiple header layouts</li>
     <li>Mega Menu</li>
-    <li><strong>Revolution Slider Included(12$ Value)</strong></li>
-
-    <li>Creative and Modern Flat Design, lots of possibilities</li>
-    <li>Fully compatible for all major browsers such as Firefox, Safari, Chrome, Vivaldi, Internet Explorer 9+</li>
-    <li>Sticky Menu</li>
-    <li>This HTML template is perfect for project of eCommerce on Wordpress, Magento, Prestashop, Drupal, Joomla and other systems.</li>
-    <li>Seo Optimised</li>
-    <li>Easy To Customize</li>
-
+    <li>MailChimp Sync</li>
+    <li>Instagram, Flick feed</li>
+    <li>Power Theme Options with Redux framework</li>
+    <li>Right, Left sidebar or Full width</li>
+    <li>Well documented &ndash; Setup theme tutorial video</li>
+    <li>SEO Optimized</li>
+    <li>Change site layout in one click ( Wide or Boxed )</li>
+    <li>Child Theme Ready</li>
     <li>&nbsp;</li>
     <li>and much more ...</li>
+</ul>
+<h2>Source &amp; Credits</h2>
+
+<ul>
+    <li><a rel="nofollow" href="http://getbootstrap.com/">Bootstrap 3 Documentation</a></li>
+    <li><a rel="nofollow" href="http://fortawesome.github.io/Font-Awesome/">Font Awesome Icons</a></li>
+    <li><a rel="nofollow" href="http://daneden.github.io/animate.css/">Animate CSS</a></li>
+    <li><a rel="nofollow" href="https://www.google.com/fonts">Google Fonts</a></li>
+    <li><a rel="nofollow" href="http://jquery.com/">jQuery JavaScript Library</a></li>
+    <li><a rel="nofollow" href="http://imakewebthings.com/waypoints/">Waypoints</a></li>
+    <li><a rel="nofollow" href="http://dimsemenov.com/plugins/magnific-popup/">Magnific Popup</a></li>
+    <li><a rel="nofollow" href="http://owlgraphic.com/owlcarousel/">OWL Carousel</a></li>
+    <li><a rel="nofollow" href="http://hilios.github.io/jQuery.countdown/">Countdown</a></li>
 </ul>
 
 
@@ -50,7 +73,7 @@
 
 
 <h2>Changelog</h2>
-<p><strong>v1.0 &ndash; 11.2015</strong></p>
+<p><strong>v1.0 &ndash; 12.2015</strong></p>
 <pre><code>Initial Release</code></pre>
 
 
