--- a/desc/desc.html
+++ b/desc/desc.html
@@ -1,10 +1,10 @@
 <h2>WINGMAN - Responsive WooCommerce Theme</h2>
-<p>We are happy to announce our new Delphinus - Creative Multi-Purpose eCommerce HTML5 Responsive. A great UI with a unique cool design, modern, stylish, and intuitive assistant for creating your best online store. </p>
+<p>We are happy to announce our new WINGMAN - Responsive WooCommerce Theme. A great UI with a unique cool design, modern, stylish, and intuitive assistant for creating your best online store. </p>
 
 <p>
     <a rel="nofollow" href="https://www.facebook.com/kitethemes/"><img alt="Follow us on Facebook" src="http://kitethemes.com/images/follow-facebook.jpg"></a>
     &nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="http://themeforest.net/user/kite-themes"><img alt="Follow us on ThemeForest" src="http://kitethemes.com/images/follow-themeforest.jpg"></a>
+    <a href="http://themeforest.net/user/Kite-Themes/follow?ref=Kite-Themes"><img alt="Follow us on ThemeForest" src="http://kitethemes.com/images/follow-themeforest.jpg"></a>
     <br>
     <a href="http://themeforest.net/author_dashboard"><img alt="Rate for us" src="http://kitethemes.com/images/rate-for-us.jpg"></a>
 </p>
@@ -13,7 +13,6 @@
 
 
 <h2>Theme Features</h2>
-
 
 <ul>
     <li><strong>Visual Page Builder SAVE $33</strong></li>
