--- a/documentation/Wingman/documentation.html
+++ b/documentation/Wingman/documentation.html
@@ -1,1 +1,1 @@
-<html><head><meta http-equiv="refresh" content="0; URL=http://kitethemes.com/wingman/documentation/"></head><body></body></html>
+<html><head><meta http-equiv="refresh" content="0; URL=http://wingman.kitethemes.com/documentation/"></head><body></body></html>
