--- a/desc/desc.html
+++ b/desc/desc.html
@@ -3,7 +3,7 @@
 
 <p>
     <a rel="nofollow" href="https://www.facebook.com/kitethemes/"><img alt="Follow us on Facebook" src="http://kitethemes.com/images/follow-facebook.jpg"></a>
-    &nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;
     <a href="http://themeforest.net/user/Kite-Themes/follow?ref=Kite-Themes"><img alt="Follow us on ThemeForest" src="http://kitethemes.com/images/follow-themeforest.jpg"></a>
     <br>
     <a href="http://themeforest.net/author_dashboard"><img alt="Rate for us" src="http://kitethemes.com/images/rate-for-us.jpg"></a>
@@ -40,12 +40,10 @@
     <li>Multiple header layouts</li>
     <li>Mega Menu</li>
     <li>MailChimp Sync</li>
-    <li>Instagram, Flick feed</li>
     <li>Power Theme Options with Redux framework</li>
     <li>Right, Left sidebar or Full width</li>
     <li>Well documented &ndash; Setup theme tutorial video</li>
     <li>SEO Optimized</li>
-    <li>Change site layout in one click ( Wide or Boxed )</li>
     <li>Child Theme Ready</li>
     <li>&nbsp;</li>
     <li>and much more ...</li>
@@ -70,13 +68,11 @@
 <p>We used <a rel="nofollow" href="https://placehold.it/">https://placehold.it/</a> for placeholders.</p>
 
 
-
 <h2>Changelog</h2>
-<p><strong>v1.0 &ndash; 12.2015</strong></p>
+<p><strong>v1.0 &ndash; 18 January 16</strong></p>
 <pre><code>Initial Release</code></pre>
 
+<h2>You may also want to check:</h2>
+<p><a target="_blank" href="http://themeforest.net/item/delphinus-creative-multipurpose-ecommerce-html5/13732519"><img alt="Delphinus - Creative Multi-Purpose eCommerce HTML5" src="http://kitethemes.com/images/delphinus-preview.jpg"></a></p>
 
 
-Tags
-
-fashion, cosmetic, clothing, clean, modern, page builder, shop, slider, store,
